--- a/fakewallapp/war/WEB-INF/web.xml
+++ b/fakewallapp/war/WEB-INF/web.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-xmlns="http://java.sun.com/xml/ns/javaee"
-xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
-http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
+	xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
+http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	version="2.5">
 	<servlet>
 		<servlet-name>Fakewallapp</servlet-name>
 		<servlet-class>org.techno.fakewall.FakewallappServlet</servlet-class>
@@ -12,6 +12,27 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-name>Fakewallapp</servlet-name>
 		<url-pattern>/fakewallapp</url-pattern>
 	</servlet-mapping>
+
+
+	<servlet>
+		<servlet-name>SaveImage</servlet-name>
+		<servlet-class>org.techno.fakewall.SaveImageServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>SaveImage</servlet-name>
+		<url-pattern>/saveimage</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>GetImage</servlet-name>
+		<servlet-class>org.techno.fakewall.GetImageServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>GetImage</servlet-name>
+		<url-pattern>/getimage</url-pattern>
+	</servlet-mapping>
+
+
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
