--- a/fakewallapp/war/WEB-INF/web.xml
+++ b/fakewallapp/war/WEB-INF/web.xml
@@ -32,6 +32,15 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 		<url-pattern>/getimage</url-pattern>
 	</servlet-mapping>
 
+	<servlet>
+		<servlet-name>RandomTextServlet</servlet-name>
+		<servlet-class>org.techno.fakewall.RandomTextServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>RandomTextServlet</servlet-name>
+		<url-pattern>/randomtext</url-pattern>
+	</servlet-mapping>
+
 
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
