--- a/fakewallapp/war/WEB-INF/web.xml
+++ b/fakewallapp/war/WEB-INF/web.xml
@@ -41,6 +41,14 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 		<url-pattern>/randomtext</url-pattern>
 	</servlet-mapping>
 
+	<servlet>
+		<servlet-name>ImageProxyServlet</servlet-name>
+		<servlet-class>org.techno.fakewall.ImageProxyServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>ImageProxyServlet</servlet-name>
+		<url-pattern>/proxy</url-pattern>
+	</servlet-mapping>
 
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
