--- a/fakewallapp/war/WEB-INF/web.xml
+++ b/fakewallapp/war/WEB-INF/web.xml
@@ -50,6 +50,16 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 		<url-pattern>/proxy</url-pattern>
 	</servlet-mapping>
 
+
+	<servlet>
+		<servlet-name>OpenGraphServlet</servlet-name>
+		<servlet-class>org.techno.fakewall.OpenGraphServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>OpenGraphServlet</servlet-name>
+		<url-pattern>/opengraph/*</url-pattern>
+	</servlet-mapping>
+	
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
